@@ -1,3 +1,4 @@
 # This file is responsible for intialising and storing global variables
 
 skip = 0 # Number of rows skipped in Pandas read_csv
+dir_PATH = None # Full PATH of directory
